<?xml version="1.0"?>
<package>
  <name>cpp_tf_listener</name>
  <version>0.0.0</version>
  <description>The cpp_tf_listener package</description>

  <maintainer email="lexilighty@gmail.com">lex</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>vicon_bridge</build_depend>
  <build_depend>vicon_listener</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>vicon_bridge</run_depend>
  <run_depend>vicon_listener</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>