<?xml version="1.0"?>
<package>
  <name>vicon_torio</name>
  <version>0.0.0</version>
  <description>The vicon_torio package</description>
  <maintainer email="lexilighty@gmail.com">Olalekan Ogunmolu</maintainer>


  <license>MIT</license>

 <url type="website">http://lakehanne.github.io/lakehanne/vicon_torio</url> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>vicon_bridge</run_depend>
  <run_depend>vicon_listener</run_depend>
  <run_depend>roscpp</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>